--- a/source/assets/scss/seldon.scss
+++ b/source/assets/scss/seldon.scss
@@ -2,6 +2,7 @@
 
 @import 'settings';
 // // We want the uncompiled sass, so that we can leverage the settings files.
+// @import 'node_modules/foundation-sites/scss/util/_mixins.scss';
 @import 'node_modules/foundation-sites/scss/foundation.scss';
 @import 'node_modules/motion-ui/src/motion-ui';
 @include foundation-global-styles;
@@ -63,7 +64,7 @@
 @import 'modules/utility';
 @import 'modules/containers';
 // @import 'modules/ui';
-// @import 'modules/nav';
+@import 'modules/nav';
 // @import 'modules/footer';
 @import 'modules/links';
 @import 'modules/type';
