--- a/source/partials/snippets/_button.erb
+++ b/source/partials/snippets/_button.erb
@@ -38,13 +38,18 @@ unless defined?(url)
 	url = "/"
 end
 
+# if defined?(icon_color)
+# 	svg_class = "icon-inline svg-color--#{icon_color}"
+# else
+# 	icon_color = "white"
+# 	svg_class = "icon-inline svg-color--#{icon_color}"
+# end
 if defined?(icon_color)
 	svg_class = "icon-inline svg-color--#{icon_color}"
 else
 	icon_color = "white"
-	svg_class = "icon-inline svg-color--#{icon_color}"
+	svg_class = "icon-inline"
 end
-
 # check for icon alignment; if anything BUT "left" ensure it's "right"
 if defined?(icon_align) && icon_align == "left"
 	svg_class = svg_class + " icon-left"
