--- a/source/leadership/index.html.erb
+++ b/source/leadership/index.html.erb
@@ -5,7 +5,7 @@ author: "Datica, Inc."
 tags: "leadership, strategy, people"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 # customCSS: "leadership"
-layout: basic
+layout: company
 ---
 <% 
 datica_execs     = data.site.person.to_a.select { |id, person| person["person_type"] == "Datica Executives" }
@@ -16,26 +16,8 @@ datica_team      = data.site.person.to_a.select { |id, person| (person["person_t
 sorted_daticans  = data.site.person.to_a.sort_by{ |id, person| person['slug'] }
 %>
 
-<div class="container-color--dark-alt">
-    <%= partial "partials/head/header", :locals => { :style => "light" } %>
-</div>
-<section class="custom-sticky custom-sticky--dark show-for-large">
-    <div class="row">
-        <div class="columns small-12 medium-12">
-            <ul>
-                <li><a href="/about">About Us</a></li>
-                <li><a href="/leadership" class="active">Leadership</a></li>
-                <li><a href="/blog">Company Blog</a></li>
-                <li><a href="https://help.datica.com/hc/en-us/sections/115001646346-Engineering-Blog">Engineering Blog</a></li>
-                <li><a href="/careers">Careers</a></li>
-                <li><a href="/press">Press</a></li>
-                <li><a href="/events">Events</a></li>
-                <li><a href="/open-source">Open Source</a></li>
-            </ul>
-        </div>
-    </div>
-</section>
-<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/3eF64DVasUAAKacOwWqmce/f63c1ea700487b2d8bda2a8110fac69e/background-about-us.jpg, small]">
+
+<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/3eF64DVasUAAKacOwWqmce/f63c1ea700487b2d8bda2a8110fac69e/background-about-us.jpg, medium]">
     <div class="row align-center">
         <div class="columns small-12 large-6 text-center">
             <h4 class="headline-6 subheader--spaced-out text--yellow-glow">Leadership</h4>
